--- a/package.json
+++ b/package.json
@@ -8,9 +8,9 @@
     "hap-nodejs": "^0.10.4"
   },
   "scripts": {
-    "clean": "rimraf ./build",
-    "build": "yarn clean && tsc",
-    "start": "yarn build; node build/athome.js&"
+    "clean": "rimraf ./build",    "build": "yarn clean && tsc",
+    "start": "yarn build; node build/athome.js&",
+    "deploy": "yarn build; cp build/athome.js /home"
   },
   "devDependencies": {
     "typescript": "^3.8.3",
