--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "scripts": {
     "clean": "rimraf ./build",    "build": "yarn clean && tsc",
     "start": "yarn build; node build/athome.js&",
-    "deploy": "yarn build; cp build/athome.js /home"
+    "deploy": "STORAGEPATH=/homekit yarn build; cp build/athome.js /homekit"
   },
   "devDependencies": {
     "typescript": "^3.8.3",
