--- a/package.json
+++ b/package.json
@@ -8,9 +8,10 @@
     "hap-nodejs": "^0.10.4"
   },
   "scripts": {
-    "clean": "rimraf ./build",    "build": "yarn clean && tsc",
-    "start": "STORAGEPATH=/homekit/ yarn build; node build/athome.js&",
-    "deploy": "yarn build; cp build/athome.js /homekit"
+    "clean": "rimraf ./build",
+    "build": "yarn clean && tsc",
+    "start": "yarn build; node build/athome.js&",
+    "deploy": "cp build/athome.js /homekit"
   },
   "devDependencies": {
     "typescript": "^3.8.3",
